<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/_50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

        <ImageView
            android:id="@+id/ivImage"
            android:src="@drawable/neutral_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_marginTop="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/name"
                android:textSize="@dimen/_24sp"
                android:textColor="@color/splash_header"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/ivFav"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/empty_heart" />

        </LinearLayout>
        
        <TextView
            android:id="@+id/tvAstronautName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/country"
            android:textSize="@dimen/_24sp"
            android:paddingTop="@dimen/_15dp"
            android:textColor="@color/splash_header"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/agency"
            android:textSize="@dimen/_24sp"
            android:paddingTop="@dimen/_15dp"
            android:textColor="@color/splash_header"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvAgency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/days_in_space"
            android:textSize="@dimen/_24sp"
            android:paddingTop="@dimen/_15dp"
            android:textColor="@color/splash_header"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvDaysInSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/position"
            android:textSize="@dimen/_24sp"
            android:paddingTop="@dimen/_15dp"
            android:textColor="@color/splash_header"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/description"
            android:textSize="@dimen/_24sp"
            android:paddingTop="@dimen/_15dp"
            android:textColor="@color/splash_header"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem/random"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>